Added TaskList.java class and reorganised files